--- a/RN.html
+++ b/RN.html
@@ -34,8 +34,13 @@
 
     <div class="topico">      
         <h2 style="text-align: center;">I. Redes Neurais</h2>
-        <img src="img/RN.png" alt="loadVideo()">
+        <img src="img/RN.png">
 
+    </div>
+    <div class='topico-texto'>
+        <p>
+            A Tecnologia de machine learning que usa de redes neurais para encontrar padrões em imagens e "adivinhar" o que tem em uma imagem nunca antes vista durante o treinamento da mesma
+        </p>
     </div>
 
     <div class="topico">
@@ -44,6 +49,21 @@
             <li>Conv2D/CNN2D/Convolutional Network 2D</li>
             <li>Conv3D/CNN3D/Convolutional Network 3D</li>
         </ul>
+    </div>
+
+    <div class='topico-texto'>
+        <p>
+            Existem muitas outras redes neurais, mas para nosso projeto até agora eu testei essas duas, sendo que o ideal é a Conv3D e antes de explicar o motivo, eu vou explicar a Conv2D antes.
+        </p>
+        <p>
+            Redes Convolucionais são redes de neurônios artificiais baseados na biologia responsável pela visão dos animais, elas são usadas principalmente em <strong> processamento de imagens/videos</strong> e suas aplicações são inúmeras.
+        </p>
+        <p>
+            Considerando que nosso projeto será um tradutor de libras e que libras são <strong>movimentos</strong> ao longo do <strong>tempo</strong> com a mão, não poderemos usar esse tipo de rede neural. Isso porque ela deixa de considerar a dimensão do tempo, esse tipo de rede só processa as dimensões espaciais de uma imagem, ou seja, a altura e largura. Para podermos ensinar uma rede neural entender o espaço tempo e, portanto, a variação da pose da mão ao longo do tempo, precisaremos usar a Conv3D.
+        </p>
+        <p>
+            A diferença entre a <strong>Conv3D</strong> e a <strong>Conv2D</strong> é que a primeira podemos usar uma 3ª dimensão. Além da altura e largura de uma imagem, podemos ter como parâmetro a quatidade de frames (tempo) e considerá-la para o aprendizado
+        </p>
     </div>
 
     <div class="topico">
