--- a/dataset.html
+++ b/dataset.html
@@ -33,10 +33,24 @@
         <h2>Estrutura dos diretórios</h2>
         <img src="img/dataset.png" alt="">
     </div>
+    <div class='topico-texto'>
+        <p>
+            Existe uma pasta principal que conterá todas as outras subpastas nomeadas pelo nome do sinal com os videos das pessoas fazendo sinais de libras
+
+        </p>
+    </div>
+    
+
 
     <div class="topico">
         <h2>Estrutura dos videos</h2>
         <img src="img/dataset-2.png" alt="">
+    </div>
+    <div class='topico-texto'>
+        <p>
+          São pequenos vídeos de poucos segundos de uma pessoa fazendo um sinal de libra correspondente ao nome da pasta
+
+        </p>
     </div>
 
 <footer>
