--- a/predict.html
+++ b/predict.html
@@ -35,6 +35,16 @@
         <img src="img/predict.png" alt="">
     </div>
 
+    <div class="topico-texto">
+        <p>
+            Aqui usaremos a camera e a rede neural em tempo real para que o programa "adivinhe" em tempo real qual sinal de libras o usuário está fazendo em frente a camera e retornar o resultado para a interface gráfica.
+        </p>
+        <p>
+            Como a parte da interface gráfica ainda não está pronta, o resultado da
+            prediction é posta na janela do openCV apenas para testes. Posteriormente o openCV será usado apenas para ler o vídeo da câmera e processar os efeitos. O video que será mostrado ao usuário será da classe do kivy.
+        </p>
+    </div>
+
     <footer>
         <div>
             veja o codigo clicando <a target='new' href="https://github.com/thalles0112/libras">aqui</a>
