--- a/preprocess.html
+++ b/preprocess.html
@@ -35,17 +35,33 @@
         <img src="img/loadVideo.png">
 
     </div>
+    <div class='topico-texto'>
+        <p>
+            Esta parte do código listará todos os caminhos dos videos presentes na pasta principal e adicionar à cada caminho lido o numero da classe na ordem das pastas descritas. Por exemplo: A função pede a pasta principal e o nome das subpastas. Supondo que foi dados os nomes 'oi', 'boa' e 'tarde', o algorítmo vai atrelar o label 0 à classe 'oi', 1 à classe 'boa', 2 à classe tarde e assim sucetivamente caso houver outras classes.
+        </p>
+        <p>
+            Por fim a função retornará uma lista de duas dimensões: caminho completo do video e numero de classe respectiva ao sinal de libras.
+        </p>
+    </div>
     
     <div class="topico">      
         <h2 style="text-align: center;">I.I Output</h2>
         <img src="img/output.png">
+    </div>
+    <div class='topico-texto'>
+        <p>Este é um exemplo de como é o output da função comentada anteriormente.</p>
+
     </div>
 
     <div class="topico">      
         <h2 style="text-align: center;">I.I Preprocessamento</h2>
         <img src="img/process.png">
     </div>
-
+    <div class='topico-texto'>
+        <p>
+            Essa parte do projeto é onde os caminhos retornados pela função anterior serão definitivamente lidos, receberão um tratamento especial onde apenas as silhuetas presentes nos videos ficarão aparentes, em outras palavras, os contornos das pessoas ficarão brancos e todo o resto do video ficará preto
+        </p>
+    </div>
 <footer>
     <div>
         veja o codigo clicando <a target='new' href="https://github.com/thalles0112/libras">aqui</a>
