--- a/dataset.html
+++ b/dataset.html
@@ -48,7 +48,7 @@
     </div>
     <div class='topico-texto'>
         <p>
-          São pequenos vídeos de poucos segundos de uma pessoa fazendo um sinal de libra correspondente ao nome da pasta
+          São pequenos vídeos de poucos segundos de uma pessoa fazendo um sinal de libras correspondente ao nome da pasta
 
         </p>
     </div>
