--- a/predict.html
+++ b/predict.html
@@ -31,7 +31,7 @@
 
 
     <div class="topico">
-        <h2>Abrir a camera e usar a rede neural treinada para ler a camera e traduzir os sinais em texto</h2>
+        <h2>Abrir a câmera e usar a rede neural treinada para ler a camera e traduzir os sinais em texto</h2>
         <div class='code'>
         <pre><code>
         import cv2 as cv
