--- a/predict.html
+++ b/predict.html
@@ -85,11 +85,11 @@
 
     <div class="topico-texto">
         <p>
-            Aqui usaremos a camera e a rede neural em tempo real para que o programa "adivinhe" em tempo real qual sinal de libras o usuário está fazendo em frente a camera e retornar o resultado para a interface gráfica.
+            Aqui usaremos a camera e a rede neural para que o programa "adivinhe" em tempo real qual sinal de libras o usuário está fazendo em frente o dispositivo e retornar o resultado em forma de texto.
         </p>
         <p>
             Como a parte da interface gráfica ainda não está pronta, o resultado da
-            prediction é posta na janela do openCV apenas para testes. Posteriormente o openCV será usado apenas para ler o vídeo da câmera e processar os efeitos. O video que será mostrado ao usuário será da classe do kivy.
+            "adivinhação" é posta na janela do openCV apenas para testes e validação da rede neural. Posteriormente o openCV será usado apenas para ler o vídeo da câmera e processar os efeitos.
         </p>
     </div>
 
