--- a/dataset.html
+++ b/dataset.html
@@ -55,7 +55,9 @@
 
 <footer>
     <div>
-        veja o codigo clicando <a target='new' href="https://github.com/thalles0112/libras">aqui</a>
+        <span>veja o codigo clicando <a target='new' href="https://github.com/thalles0112/libras">aqui</a></span>
+        <p></p>
+        <a href="#top" class="glyphicon glyphicon-chevron-up">voltar ao topo</a>
     </div>
 </footer>
     
