--- a/index.html
+++ b/index.html
@@ -25,10 +25,22 @@
         </ul>
     </div>
 
-    <div class="topico">
+    <div class="topico-texto">
         <p>
-            Site do projeto integrador
+            Bem vindo ao site descritivo do Projeto Integrador. O projeto se trata de um apliacativo de inteligência artifical capaz de traduzir libras em tempo real para texto.
         </p>
+        <p>
+            Para a execução do projeto serão utilizadas as seguintes bibliotecas do Python:
+        </p>
+        <ul>
+            
+            <li>tensorflow 2.6.0</li>
+            <li>openCV 4.5.3.56 </li>
+            <li>numpy 1.19.5</li>
+            <li>os</li>
+
+        </ul>
+        <p>Versão do Python: 3.9.5</p>
     </div>
 
     <footer>
