--- a/predict.html
+++ b/predict.html
@@ -96,6 +96,7 @@
     <footer>
         <div>
             veja o codigo clicando <a target='new' href="https://github.com/thalles0112/libras">aqui</a>
+            <a href="#top" class="glyphicon glyphicon-chevron-up">voltar ao topo</a>
         </div>    
     </footer>
 
