--- a/RN.html
+++ b/RN.html
@@ -40,7 +40,7 @@
     <div class='topico-texto'>
         
         <p>
-            Redes Neurais são Tecnologias do ramo de machine learning que podem ser usadas para computadores aprender padrões em imagens ou qualquer outro tipo de dado e "adivinhar" o que tem em uma imagem ou em qualquer outro arquivo que ela tenha treinado. Existem inúmeras aplicações que podem ser feitas com esse tipo de inteligência artificial. Isso inclui atividades como descobrir a formula de conversão de milhas para kilômetros até identificar câncer em exames.
+            A tecnlogia de Redes Neurais Artificiais é uma abstração das redes neurais de seres vivos para serem usadas para computadores aprenderem padrões em imagens ou qualquer outro tipo de dado e "adivinhar" o que tem em uma imagem ou em qualquer situação que ela tenha treinado. Existem inúmeras aplicações que podem ser feitas com esse tipo de inteligência artificial. Isso inclui atividades como descobrir a formula de conversão de milhas para kilômetros até identificar câncer em exames.
         </p>
     </div>
 
