--- a/RN.html
+++ b/RN.html
@@ -54,7 +54,7 @@
 
     <div class='topico-texto'>
         <p>
-            Existem muitos outros modelos de redes neurais, mas para nosso projeto, até agora, eu testei apenas essas duas, sendo que o ideal é seria uma rede Convolucional 3D. Antes de explicar o motivo, eu vou explicar o Funcionamento da rede Convolucional 2D.
+            Existem muitos outros modelos de redes neurais, mas para nosso projeto, até agora, eu testei apenas essas duas, sendo que o ideal seria uma rede Convolucional 3D. Antes de explicar o motivo, eu vou explicar o Funcionamento da rede Convolucional 2D.
         </p>
        
     </div>
